--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,8 +8,35 @@
 </head>
 <body>
     <div class="w-full h-screen bg-zinc-900 text-white p-10">
+        <div class="w-full flex justify-end">
+            <a class="bg-red-500 rounded-md px-3 py-2 text-sm inline-block mb-5" href="/logout">logout</a>
+
+        </div>
         <h3 class="text-3xl font-light">Hello, <%= user.name %>👋 </h3>
-        <h5>you can create new post</h5>
+        <h5 class="mb-5">you can create new post</h5>
+        <form action="/post" method="post">
+            <textarea class="p-3 outline-none resize-none block w-1/3 bg-transparent border-2 border-zinc-800 rounded-md "  id="" placeholder="Whats on your mind" name="content"></textarea>
+            <input type="submit" value="Create new post" class="px-3 mt-2 w-40 text-sm rounded-md py-2 bg-blue-500 block">
+        </form>
+        <div class="posts mt-20">
+            <h3 class="text-zinc-400">your posts</h3>
+            <div class="postcontainer mt-5">
+                <% user.posts.reverse().forEach(function(post){%> 
+                    <div class="post w-1/3 mb-4 bg-zinc-800 rounded-md p-4 border-[1px] border-zinc-700">
+                        <h4 class="text-blue-500 mb-2">@<%=user.username  %></h4>
+                        <p class="text-sm tracking-tight"><%= post.content %></p>
+                        <small class="mt-2 inline-block"><%= post.likes.length %></small>
+                        <div class="btns flex gap-4 mt-1">
+                            <a href="/like/<%= post._id %>" class="text-blue-500">
+                                <%= post.likes.indexOf(user._id)=== -1 ? "like": "unlike"  %>
+                            </a>
+                            <a href="/edit/<%= post._id %>" class="text-zinc-600">edit</a>
+                        </div>
+                    </div>
+                    
+                <%}) %>
+            </div>
+        </div>
     </div>
 </body>
 </html>
